[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.18.0"
axum = "0.6.18"
shuttle-axum = "0.18.0"
tokio = "1.28.2"
serde = "1.0.164"
serde_json = "1.0.97"
common = { path = "../common" }
shuttle-persist = "0.18.0"
